@@ -12,6 +12,9 @@
 
 	* bmc-device/: Support --set-acpi-power-state.
 
+	* bmc-config/src/: Output lan authentication enables fields
+	dependent on authentication support fields.
+
 2008-07-01 Albert Chu <chu11@llnl.gov>
 
 	* bmc-device/bmc-device.8.pre.in: Tweak text.
